# corydon

./: .clang-format  .clangd  CMakeLists.txt  README.md  readme.md
.github/workflows/: build-gcc-toolchain.yml  cmake.yml  test.yml
scripts/test_limine/: .gitignore  limine.conf  make.sh
src/arch/x86/: boot.s
src/arch/x86/64/: linker.ld  printf_impl.c
src/arch/x86_64/: boot.s  bootstap.s  flush.s  gdt.c  idt.c  impl.c  inline.c  isr.s  linker.ld  math.c  panic.c  sse.s  utils.c
src/arch/x86_64/cpu/: flush.s  gdt.c  idt.c  isr.s  timer.c
src/arch/x86_64/dri/: kbd.c  pic.c  rtc.c  serial.c  timer.c
src/arch/x86_64/idt/: idt.c  idt.h  isr.s
src/arch/x86_64/mem/: bitmap.c  liballoc_glue.c  pmm.c
src/arch/x86_64/print/: printf_impl.c
src/arch/x86_64/utils/: mem.c  utils.c  utils.h
src/arch/x86_64/x86/: boot.s
src/include/: gdt.h  idt.h  inline.h  panic.h  printf.h  utils.h
src/include/boot/: bootloader.h  multiboot2.h
src/include/cpu/: gdt.h  idt.h  tss.h
src/include/dri/: kbd.h  pic.h  serial.h  time.h  timer.h
src/include/mem/: bitmap.h  liballoc.h  pmm.h
src/include/print/: debugf.h  font.h  printf.h
src/include/utils/: mem.h
src/kernel/: main.c  printf.c  printf_impl.c
src/kernel/drivers/ps2/: ps2.h
src/kernel/mem/: liballoc.c
src/kernel/print/: debugf.c  printf.c
src/kernel/printf/: impl.c
tools/: .gitignore  boot_limine.sh  build_toolchain.sh  cross.sh  debug_qemu.sh  debug_qemu_gdb.sh  limine.sh
tools/config/: limine.conf
tools/test/: .gitignore
